[package]
name = "suibase-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
log = "0.4.0"
pretty_env_logger = "0.4"
home = "0.5.5"
twox-hash = "1.6.1"

serde_yaml = "0.9"
bitflags = "2.3"

axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
mime = "0.3.16"

tokio.workspace = true
tokio-graceful-shutdown.workspace = true


notify = { version = "6.0", default-features = false, features = [
    "macos_kqueue",
] }

anyhow.workspace = true

clap.workspace = true
futures.workspace = true
colored.workspace = true

jsonrpsee.workspace = true
jsonrpsee-proc-macros.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true

thiserror.workspace = true

tower.workspace = true
tower-http.workspace = true
